# atelier

./: .gitignore  LICENSE  README.md  release.sh  run.sh  stop.sh
art/circles/: Cargo.toml  algo.odf
art/circles/src/: lib.rs
art/ornament/: Cargo.toml
art/ornament/src/: lib.rs
art/stripes/: Cargo.toml
art/stripes/src/: lib.rs
artist/: Cargo.toml
artist/src/: main.rs
common/: Cargo.toml
common/src/: arguments.rs  date.rs  letter.rs  lib.rs  log.rs  poke_message.rs  serialized.rs
concierge/: Cargo.toml
concierge/src/: lib.rs
config/template/: artist.config-template  concierge.config-template  employer.config-template  postmaster.config-template  sudoku.config-template
employer/: Cargo.toml
employer/src/: main.rs
player/: Cargo.toml
player/src/: main.rs
postmaster/: Cargo.toml
postmaster/src/: main.rs  postmaster.rs
postmaster/src/postmaster/: letter.rs
sudoku/: Cargo.toml
sudoku/src/: main.rs  sudoku.rs
tuner/: Cargo.toml
tuner/src/: lib.rs
