[package]
name = "artist"
version = "0.1.0"
authors = ["deszczowy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.23.0"
imageproc="0.20"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.52"


common = { path = "../library/common" }
tuner = { path = "../library/tuner" }
concierge = { path = "../library/concierge" }
circles = { path = "../art/circles" }
stripes = { path = "../art/stripes" }
painting = { path = "../library/painting" }