[package]
name = "concierge"
version = "0.1.0"
authors = ["deszczowy"]
edition = "2018"
description = "A little Rust library that enables file-based communication between applications"

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
notify = "4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
tuner = { path = "../library/tuner" }
common = { path = "../library/common" }