[package]
name = "employer"
version = "0.1.0"
authors = ["deszczowy"]
edition = "2018"
description = "A little Rust job dispenser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.52"
job_scheduler = "*"
concierge = { path = "../concierge" }
common = { path = "../library/common" }