[package]
name = "postmaster"
version = "0.1.0"
authors = ["deszczowy"]
description = "A little Rust application that sends an email when requested"
edition = "2018"

[dependencies]
lettre = "0.9"
lettre_email = "0.9"
mime = "0.3.13"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.52"

# rand = { git = "https://github.com/rust-lang-nursery/rand" } # from online repo
concierge = { path = "../concierge" }
tuner = { path = "../tuner" }
common = { path = "../common" }
