[package]
name = "sudoku"
version = "0.1.0"
authors = ["deszczowy"]
edition = "2018"
description = "Sudoku board generator"

[dependencies]
rand="0.7"
image="0.23.0"
imageproc="0.20"
rusttype = "0.8"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.52"

concierge = { path = "../concierge" }
common = { path = "../common" }
tuner = { path = "../tuner" }