[package]
name = "ornament"
version = "0.1.0"
authors = ["deszczowy <krystian.szklarek@op.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random = { path = "../../library/random" }
painting = { path = "../../library/painting" }